<resources>
    <string name="app_name">Lab03_BasicWidget_CustomView</string>
    <string name="name">Name:</string>
    <string name="IQ">IQ:</string>
    <string name="gender">Gender:</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="special_people">Special People:</string>
    <string name="dob">DOB:</string>
    <string name="image">Avatar</string>
    <string name="facebook">Facebook</string>
    <string name="submit">SUBMIT</string>
</resources>
